add missing validations in register form

--- a/src/app/core/login/containers/update-password.component.html
+++ b/src/app/core/login/containers/update-password.component.html
@@ -7,8 +7,8 @@
         <mat-label i18n="@@password">Password</mat-label>
         <input type="password" class="form-control" id="password" matInput autocomplete="off" formControlName="password" i18n-placeholder placeholder="Introduce your password">
         <mat-error *ngIf="updatePasswordForm.get('password').errors">
-            <span *ngIf="updatePasswordForm.get('password').hasError('required'); else otherError" i18n>The field password is <strong>required</strong></span>
-            <ng-template #otherError><span i18n>Invalid password, check the details</span></ng-template>
+            <span *ngIf="updatePasswordForm.get('password').hasError('required'); else otherError" i18n="@@required_password">The field password is <strong>required</strong></span>
+            <ng-template #otherError><span i18n="@@invalid_password">Invalid password, check the details</span></ng-template>
         </mat-error>
     </mat-form-field>
     <details class="details">
@@ -20,11 +20,11 @@
         <input type="password" class="form-control" id="passwordConfirmation" matInput autocomplete="off" i18n-placeholder placeholder="Repit the password"
         formControlName="passwordConfirmation">
         <mat-error *ngIf="updatePasswordForm.get('passwordConfirmation').errors">
-            <span *ngIf="updatePasswordForm.get('passwordConfirmation').hasError('required'); else otherError" i18n>Both passwords dont match</span>
-            <ng-template #otherError><span i18n>Invalid password, check the details</span></ng-template>
+            <span *ngIf="updatePasswordForm.get('passwordConfirmation').hasError('required'); else otherError" i18n="@@required_password">The field password is <strong>required</strong></span>
+            <ng-template #otherError><span i18n="@@invalid_password">Invalid password, check the details</span></ng-template>
         </mat-error>
     </mat-form-field>
-    <mat-error *ngIf="updatePasswordForm.hasError('notMatchingPasswords')" class="form-error" i18n>Both passwords dont match</mat-error>
+    <mat-error *ngIf="updatePasswordForm.hasError('notMatchingPasswords')" class="form-error" i18n="@@passwords_dont_match">Both passwords dont match</mat-error>
 
     <div class="button-block">
         <button type="submit" class="button border-1 mt-3" [disabled]="!updatePasswordForm.valid" [ngClass]="{'disabled-button': !updatePasswordForm.valid}"
