--- a/src/app/public/register/containers/register.component.scss
+++ b/src/app/public/register/containers/register.component.scss
@@ -4,7 +4,11 @@
     padding-top: 10%;
   }
 
-   .register-img {
+  .register-field {
+    margin-top: 15px;
+  }
+
+  .register-img {
     // min-height: 200px;
     width: 200px;
     display: block;
