--- a/src/app/core/settings/containers/settings.component.html
+++ b/src/app/core/settings/containers/settings.component.html
@@ -23,32 +23,24 @@
             <mat-form-field class="full-width" [appearance]="settingsForm.enabled ? 'fill' : 'outline'">
               <mat-label i18n="@@name">Name</mat-label>
               <input type="text" matInput autocomplete="off" formControlName="name" placeholder="Introduce tu nombre de usuario">
-              <mat-error *ngIf="settingsForm.get('name').hasError('required')" i18n>
-                The field name is <strong>required</strong>
-              </mat-error>
+              <mat-error *ngIf="settingsForm.get('name').hasError('required')" i18n="@@required_username">The field name is <strong>required</strong></mat-error>
             </mat-form-field>
           </div>
           <div class="form-group">
             <mat-form-field class="full-width" [appearance]="settingsForm.enabled ? 'fill' : 'outline'">
               <mat-label i18n="@@email">Email</mat-label>
               <input type="email" matInput autocomplete="off" formControlName="email" placeholder="Introduce email">
-              <mat-error *ngIf="settingsForm.get('email').hasError('email') && !settingsForm.get('email').hasError('required')" i18n>
-                The email format is not valid
-              </mat-error>
-              <mat-error *ngIf="settingsForm.get('email').hasError('required')" i18n>
-                The field email <strong>required</strong>
-              </mat-error>
+              <mat-error *ngIf="settingsForm.get('email').hasError('email') && !settingsForm.get('email').hasError('required')" i18n="@@invalid_email">The field email has <strong>invalid format</strong></mat-error>
+              <mat-error *ngIf="settingsForm.get('email').hasError('required')" i18n="@@required_email">The field email is <strong>required</strong></mat-error>
             </mat-form-field>
           </div>
             
           <div class="form-group" [formGroup]="passwordForm">
             <mat-form-field class="full-width" [appearance]="settingsForm.enabled ? 'fill' : 'outline'">
-              <mat-label i81n>Current password</mat-label>
+              <mat-label i18n>Current password</mat-label>
               <input type="password" matInput autocomplete="off" formControlName="password" placeholder="*******">
               <mat-icon *ngIf="settingsForm.enabled" (click)="enableChangePassword()" class="button-in-input" matSuffix i18n-matTooltip matTooltip="I want to change the password">mode_edit</mat-icon>
-              <mat-error *ngIf="passwordForm.get('password').hasError('required')" class="mat-error--with-details" i18n>
-                The field pasword is <strong>required</strong>
-              </mat-error>
+              <mat-error *ngIf="passwordForm.get('password').hasError('required')" class="mat-error--with-details" i18n="@@required_password">The field password is <strong>required</strong></mat-error>
               <mat-error *ngIf="!passwordForm.get('password').hasError('required') && passwordForm.get('password').hasError('forbiddenPassword')" class="mat-error--with-details" i18n="@@pass_requirements-error">
                 The field password <strong>does not match the requirements</strong>.
               </mat-error>
@@ -60,9 +52,7 @@
             <mat-form-field *ngIf="showPasswordChange" class="full-width" [appearance]="settingsForm.enabled ? 'fill' : 'outline'">
               <mat-label i18n>Introduce the new password</mat-label>
               <input type="password" matInput autocomplete="off" formControlName="newPassword" placeholder="*******">  
-              <mat-error *ngIf="passwordForm.get('newPassword').hasError('required')" i18n>
-                The field pasword is <strong>required</strong>.
-              </mat-error>
+              <mat-error *ngIf="passwordForm.get('newPassword').hasError('required')" i18n="@@required_password">The field password is <strong>required</strong></mat-error>
               <mat-error *ngIf="!passwordForm.get('newPassword').hasError('required') && passwordForm.get('newPassword').hasError('forbiddenPassword')" i18n="@@pass_requirements-error">
                 The field password <strong>does not match the requirements</strong>.
               </mat-error>
