--- a/src/app/public/contact/containers/contact.component.html
+++ b/src/app/public/contact/containers/contact.component.html
@@ -6,31 +6,48 @@
       <h2 class="contact-title" i18n>Get in Touch</h2>
     </div>
     <div class="col-lg-8">
-      <form class="form-contact contact_form" action="contact_process.php" method="post" id="contactForm"
-            novalidate="novalidate">
+      <form class="form-contact contact_form" id="contactForm" novalidate="novalidate" [formGroup]="contactForm">
         <div class="row">
           <div class="col-12 form-group">
-                  <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9"
-                            i18n-placeholder placeholder="Enter Message"></textarea>
+            <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9"
+              formControlName="message" i18n-placeholder placeholder="Enter Message"></textarea>
+            <mat-error *ngIf="contactForm.get('message').touched">
+              <span *ngIf="contactForm.get('message').hasError('required')" i18n>The field message is <strong>required</strong></span>
+              <span *ngIf="contactForm.get('message').hasError('minlength')" i18n>The field message is <strong>too short</strong></span>
+              <span *ngIf="contactForm.get('message').hasError('maxlength')" i18n>The field message is <strong>too long</strong></span>
+            </mat-error>
           </div>
           <div class="col-sm-6">
             <div class="form-group">
-              <input class="form-control" name="name" id="name" type="text" i18n-placeholder placeholder="Enter your name">
+              <input class="form-control" formControlName="name" name="name" id="name" type="text" i18n-placeholder placeholder="Enter your name">
+              <mat-error *ngIf="contactForm.get('name').touched">
+                <span *ngIf="contactForm.get('name').hasError('required')" i18n="@@required_username">The field name is <strong>required</strong></span>
+                <span *ngIf="contactForm.get('name').hasError('maxlength')" i18n="@@max_username">The field name is <strong>too long</strong></span>
+              </mat-error>
             </div>
           </div>
           <div class="col-sm-6">
             <div class="form-group">
-              <input class="form-control" name="email" id="email" type="email" i18n-placeholder placeholder="Enter email address">
+              <input class="form-control" formControlName="email" name="email" id="email" type="email" i18n-placeholder placeholder="Enter email address">
+              <mat-error *ngIf="contactForm.get('email').touched">
+                <span *ngIf="contactForm.get('email').hasError('required')" i18n="@@required_email">The field email is <strong>required</strong></span>
+                <span *ngIf="contactForm.get('email').hasError('email')" i18n="@@invalid_email">The field email has <strong>invalid format</strong></span>
+                <span *ngIf="contactForm.get('email').hasError('maxlength')" i18n="@@max_username">The field email is <strong>too long</strong></span>
+              </mat-error>
             </div>
           </div>
           <div class="col-12">
             <div class="form-group">
-              <input class="form-control" name="subject" id="subject" type="text" i18n-placeholder placeholder="Enter Subject">
+              <input class="form-control" formControlName="subject" name="subject" id="subject" type="text" i18n-placeholder placeholder="Enter Subject">
+              <mat-error *ngIf="contactForm.get('subject').touched">
+                <span *ngIf="contactForm.get('subject').hasError('required')" i18n>The field subject is <strong>required</strong></span>
+                <span *ngIf="contactForm.get('subject').hasError('maxlength')" i18n>The field subject is <strong>too long</strong></span>
+              </mat-error>
             </div>
           </div>
         </div>
         <div class="form-group mt-3">
-          <button type="submit" class="button button-contactForm" i18n>Send Message</button>
+          <button type="submit" (click)="submit()" [disabled]="!isValidForm()" class="button button-contactForm" i18n>Send Message</button>
         </div>
       </form>
     </div>
@@ -50,7 +67,7 @@
       <div class="media contact-info">
         <span class="contact-info__icon"><i class="ti-email"></i></span>
         <div class="media-body">
-          <h3>📩 <a href="mailto:mysuitcase@gmail.com">mysuitcase@gmail.com</a></h3>
+          <h3>📩 <a href="mailto:soporte@mysuitcase.net">soporte@mysuitcase.net</a></h3>
           <p i18n>Send us your query anytime!</p>
         </div>
       </div>
