fix style issues with forms

--- a/src/app/admin/notifications/create-notification-component/create-notification.component.html
+++ b/src/app/admin/notifications/create-notification-component/create-notification.component.html
@@ -1,5 +1,5 @@
 
-<form class="form-notification form-contact offset-xl-1" [formGroup]="notificationForm">
+<form class="form-notification form offset-xl-1" [formGroup]="notificationForm">
     <div class="search-wrapper">
         <div class="scrollable-area">
           <div class="form-group">
