--- a/src/app/core/login/containers/update-password.component.html
+++ b/src/app/core/login/containers/update-password.component.html
@@ -1,6 +1,6 @@
 <navbar-component></navbar-component>
 
-<form class="form-contact col-lg-6 col-xl-6 offset-xl-1" [formGroup]="updatePasswordForm">
+<form class="form col-lg-6 col-xl-6 offset-xl-1" [formGroup]="updatePasswordForm">
     <div class="search-wrapper">
 
     <mat-form-field class="full-width login-field" appearance="outline">
@@ -26,7 +26,7 @@
     </mat-form-field>
     <mat-error *ngIf="updatePasswordForm.hasError('notMatchingPasswords')" class="form-error" i18n="@@passwords_dont_match">Both passwords dont match</mat-error>
 
-    <div class="button-block">
+    <div class="button-block mb-3">
         <button type="submit" class="button border-1 mt-3" [disabled]="!updatePasswordForm.valid" [ngClass]="{'disabled-button': !updatePasswordForm.valid}"
           (click)="submit()" i18n>Go ahead!</button>
         <button type="submit" class="button border-1 mt-3" (click)="goTo('register')" i18n>I am new, Let's start!</button>
