--- a/src/app/public/contact/containers/contact.component.html
+++ b/src/app/public/contact/containers/contact.component.html
@@ -1,12 +1,12 @@
 <navbar-component></navbar-component>
-<section class="hero-banner magic-ball">
+<section class="hero-banner min-full-height">
   <div class="container">
   <div class="row">
     <div class="col-12">
       <h2 class="contact-title" i18n>Get in Touch</h2>
     </div>
     <div class="col-lg-8">
-      <form class="form-contact contact_form" id="contactForm" novalidate="novalidate" [formGroup]="contactForm">
+      <form class="form contact_form" id="contactForm" novalidate="novalidate" [formGroup]="contactForm">
         <div class="row">
           <div class="col-12 form-group">
             <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9"
