--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,8 @@
 @import "./scss/_section-intro";
 @import "./scss/_home";
 // @import "scss/gallery";
-@import "./scss/contact";
+@import "./scss/general";
+@import "./scss/form";
 @import "./scss/blog";
 @import "./scss/btn";
 @import "./scss/footer";
