--- a/src/app/core/settings/containers/settings.component.html
+++ b/src/app/core/settings/containers/settings.component.html
@@ -1,6 +1,6 @@
 <navbar-component></navbar-component>
 
-<form class="form-settings form-contact col-sm-10 col-lg-6 col-xl-6 offset-xl-1" [formGroup]="settingsForm">
+<form class="form-settings form col-sm-10 col-lg-6 col-xl-6 offset-xl-1" [formGroup]="settingsForm">
     <div class="search-wrapper">
         <div class="modify-buttons">
             <button class="button edit-button" (click)="toggleEditMode()">
