--- a/src/app/public/create-suitcase/create-suitcase.component.html
+++ b/src/app/public/create-suitcase/create-suitcase.component.html
@@ -7,13 +7,13 @@
         <mat-label>Nuevo item</mat-label>
         <input matInput [(ngModel)]="newItem" name="newItem">
         <div id="selection-categories-wrapper">
-          <mat-icon matSuffix [ngClass]="[newItem ? 'selectable': 'disabled-icon', selectedCategory === 'tech'? 'selected': '']" class="selection-icon" (click)="selectedCategory = 'tech'" matTooltip="Tecnología" [matTooltipPosition]="'below'">photo_camera</mat-icon>
-          <mat-icon matSuffix [ngClass]="[newItem ? 'selectable': 'disabled-icon', selectedCategory === 'clothes' ? '': '']" class="selection-icon" (click)="selectedCategory = 'clothes'" matTooltip="Ropa" [matTooltipPosition]="'below'">checkroom</mat-icon>
-          <mat-icon matSuffix [ngClass]="[newItem ? 'selectable': 'disabled-icon', selectedCategory === 'cleanliness' ? '': '']" class="selection-icon" (click)="selectedCategory = 'cleanliness'" matTooltip="Aseo" [matTooltipPosition]="'below'">clean_hands</mat-icon>
-          <mat-icon matSuffix [ngClass]="[newItem ? 'selectable': 'disabled-icon', selectedCategory === 'medicines' ? '': '']" class="selection-icon" (click)="selectedCategory = 'medicines'" matTooltip="Medicinas" [matTooltipPosition]="'below'">medical_services</mat-icon>
-          <mat-icon matSuffix [ngClass]="[newItem ? 'selectable': 'disabled-icon', selectedCategory === 'documents' ? '': '']" class="selection-icon" (click)="selectedCategory = 'documents'" matTooltip="Documentos" [matTooltipPosition]="'below'">description</mat-icon>
-          <mat-icon matSuffix [ngClass]="[newItem ? 'selectable': 'disabled-icon', selectedCategory === 'pet' ? '': '']" class="selection-icon" (click)="selectedCategory = 'pet'" matTooltip="Mascota" [matTooltipPosition]="'below'">pets</mat-icon>
-          <mat-icon matSuffix [ngClass]="[newItem ? 'selectable': 'disabled-icon', selectedCategory === 'baby' ? '': '']" class="selection-icon" (click)="selectedCategory = 'baby'" matTooltip="Bebé" [matTooltipPosition]="'below'">baby_changing_station</mat-icon>
+          <mat-icon matSuffix [ngClass]="[newItem ? 'selectable': 'disabled-icon', selectedCategory === 'tech'? 'selected': '']" class="selection-icon" (click)="selectedCategory = selectedCategory === 'tech' ? '': 'tech'" matTooltip="Tecnología" [matTooltipPosition]="'below'">photo_camera</mat-icon>
+          <mat-icon matSuffix [ngClass]="[newItem ? 'selectable': 'disabled-icon', selectedCategory === 'clothes' ? 'selected': '']" class="selection-icon" (click)="selectedCategory = selectedCategory === 'clothes' ? '': 'clothes'" matTooltip="Ropa" [matTooltipPosition]="'below'">checkroom</mat-icon>
+          <mat-icon matSuffix [ngClass]="[newItem ? 'selectable': 'disabled-icon', selectedCategory === 'cleanliness' ? 'selected': '']" class="selection-icon" (click)="selectedCategory = selectedCategory === 'cleanliness' ? '': 'cleanliness'" matTooltip="Aseo" [matTooltipPosition]="'below'">clean_hands</mat-icon>
+          <mat-icon matSuffix [ngClass]="[newItem ? 'selectable': 'disabled-icon', selectedCategory === 'medicines' ? 'selected': '']" class="selection-icon" (click)="selectedCategory = selectedCategory === 'medicines' ? '': 'medicines'" matTooltip="Medicinas" [matTooltipPosition]="'below'">medical_services</mat-icon>
+          <mat-icon matSuffix [ngClass]="[newItem ? 'selectable': 'disabled-icon', selectedCategory === 'documents' ? 'selected': '']" class="selection-icon" (click)="selectedCategory = selectedCategory === 'documents' ? '': 'documents'" matTooltip="Documentos" [matTooltipPosition]="'below'">description</mat-icon>
+          <mat-icon matSuffix [ngClass]="[newItem ? 'selectable': 'disabled-icon', selectedCategory === 'pet' ? 'selected': '']" class="selection-icon" (click)="selectedCategory = selectedCategory === 'pet' ? '': 'pet'" matTooltip="Mascota" [matTooltipPosition]="'below'">pets</mat-icon>
+          <mat-icon matSuffix [ngClass]="[newItem ? 'selectable': 'disabled-icon', selectedCategory === 'baby' ? 'selected': '']" class="selection-icon" (click)="selectedCategory = selectedCategory === 'baby' ? '': 'baby'" matTooltip="Bebé" [matTooltipPosition]="'below'">baby_changing_station</mat-icon>
         </div>
         <mat-icon matSuffix [ngClass]="newItem ? '': 'disabled-icon'" class="clickable-icon" id="add-icon" (click)="addNewItem(newItem, itemForm.controls['newItem'])">add</mat-icon>
         <mat-error *ngIf="itemForm.controls['newItem']?.errors?.duplicated">El elemento ya se encuentra en la lista</mat-error>
@@ -22,14 +22,16 @@
   </div>
 
   <div class="row columns-row">
-    <div class="col-lg-4 col-sm-6 suggestion-column">
+    <div class="col-lg-3 col-sm-6 col-12 suggestion-column">
       <div class="card">
         <div class="card-header suggestion-header" *ngIf="suggestionList">
           <mat-icon matSuffix matTooltip="Suggestions" [matTooltipPosition]="'below'">emoji_objects</mat-icon>
           <span>Sugerencias</span>
+          <mat-icon *ngIf="showSuggestions" (click)="showSuggestions = !showSuggestions" matSuffix matTooltip="expand" [matTooltipPosition]="'below'" class="unexpand">arrow_drop_up</mat-icon>
+          <mat-icon *ngIf="!showSuggestions" (click)="showSuggestions = !showSuggestions" matSuffix matTooltip="expand" [matTooltipPosition]="'below'" class="expand">arrow_drop_down</mat-icon>
         </div>
 
-        <div class="suggestion-lists">
+        <div class="suggestion-lists" *ngIf="showSuggestions">
           <my-suitcase-item-list #common
                                  [itemList]="suggestionList.common ? suggestionList.common.items : []"
                                  [maxShownList]="10"
@@ -81,7 +83,7 @@
       </div>
     </div>
 
-    <div class="col-lg-4 suitcase-column">
+    <div class="col-lg-6 col-12 suitcase-column">
       <div class="card suitcase-card">
         <div class="card-header">
           <mat-icon matSuffix matTooltip="Suggestions" [matTooltipPosition]="'below'">backpack</mat-icon>
@@ -89,86 +91,95 @@
           <mat-icon aria-hidden="false" aria-label="Save the suitcase" id="save-icon" class="icon" [ngClass]="totalItemsInList > 0 ? '': 'disabled'" (click)="submitSuitcase()">save</mat-icon>
           <mat-icon aria-hidden="false" aria-label="Print the list" id="print-icon" class="icon" [ngClass]="totalItemsInList > 0 ? '': 'disabled'" (click)="printSuitcase()">print</mat-icon>
         </div>
-        <div *ngFor="let item of suitcaseList['tech']; let i=index" class="common-card-body">
-          <div class="card-header card-subsubheader" *ngIf="showSubsubheader('tech', item.name)">
-            <mat-icon matSuffix matTooltip="Tecnología" [matTooltipPosition]="'below'">photo_camera</mat-icon>
-            <span>Tecnología</span>
+        <div class="card-body">
+          <div *ngFor="let item of suitcaseList['tech']; let i=index" class="common-card-body">
+            <div class="card-header card-subsubheader" *ngIf="showSubsubheader('tech', item.name)">
+              <mat-icon matSuffix matTooltip="Tecnología" [matTooltipPosition]="'below'">photo_camera</mat-icon>
+              <span>Tecnología</span>
+            </div>
+            <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
-          <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
-        </div>
-        <div *ngFor="let item of suitcaseList['cleanliness']; let i=index" class="common-card-body">
-          <div class="card-header card-subsubheader" *ngIf="showSubsubheader('cleanliness', item.name)">
-            <mat-icon matSuffix matTooltip="Aseo" [matTooltipPosition]="'below'">clean_hands</mat-icon>
-            <span>Aseo personal</span>
+          <div *ngFor="let item of suitcaseList['cleanliness']; let i=index" class="common-card-body">
+            <div class="card-header card-subsubheader" *ngIf="showSubsubheader('cleanliness', item.name)">
+              <mat-icon matSuffix matTooltip="Aseo" [matTooltipPosition]="'below'">clean_hands</mat-icon>
+              <span>Aseo personal</span>
+            </div>
+            <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
-          <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
-        </div>
-        <div *ngFor="let item of suitcaseList['clothes']; let i=index" class="common-card-body">
-          <div class="card-header card-subsubheader" *ngIf="showSubsubheader('clothes', item.name)">
-            <mat-icon matSuffix matTooltip="Ropa" [matTooltipPosition]="'below'">checkroom</mat-icon>
-            <span>Ropa</span>
+          <div *ngFor="let item of suitcaseList['clothes']; let i=index" class="common-card-body">
+            <div class="card-header card-subsubheader" *ngIf="showSubsubheader('clothes', item.name)">
+              <mat-icon matSuffix matTooltip="Ropa" [matTooltipPosition]="'below'">checkroom</mat-icon>
+              <span>Ropa</span>
+            </div>
+            <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
-          <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
-        </div>
-        <div *ngFor="let item of suitcaseList['medicines']; let i=index" class="common-card-body">
-          <div class="card-header card-subsubheader" *ngIf="showSubsubheader('medicines', item.name)">
-            <mat-icon matSuffix matTooltip="Medicinas" [matTooltipPosition]="'below'">medical_services</mat-icon>
-            <span>Medicinas</span>
+          <div *ngFor="let item of suitcaseList['medicines']; let i=index" class="common-card-body">
+            <div class="card-header card-subsubheader" *ngIf="showSubsubheader('medicines', item.name)">
+              <mat-icon matSuffix matTooltip="Medicinas" [matTooltipPosition]="'below'">medical_services</mat-icon>
+              <span>Medicinas</span>
+            </div>
+            <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
-          <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
-        </div>
-        <div *ngFor="let item of suitcaseList['documents']; let i=index" class="common-card-body">
-          <div class="card-header card-subsubheader" *ngIf="showSubsubheader('documents', item.name)">
-            <mat-icon matSuffix matTooltip="Documentos" [matTooltipPosition]="'below'">description</mat-icon>
-            <span>Documentación</span>
+          <div *ngFor="let item of suitcaseList['documents']; let i=index" class="common-card-body">
+            <div class="card-header card-subsubheader" *ngIf="showSubsubheader('documents', item.name)">
+              <mat-icon matSuffix matTooltip="Documentos" [matTooltipPosition]="'below'">description</mat-icon>
+              <span>Documentación</span>
+            </div>
+            <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
-          <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
-        </div>
-        <div *ngFor="let item of suitcaseList['beach']; let i=index" class="common-card-body">
-          <div class="card-header card-subsubheader" *ngIf="showSubsubheader('beach', item.name)">
-            <mat-icon matSuffix matTooltip="Playa" [matTooltipPosition]="'below'">beach_access</mat-icon>
-            <span>Playa</span>
+          <div *ngFor="let item of suitcaseList['beach']; let i=index" class="common-card-body">
+            <div class="card-header card-subsubheader" *ngIf="showSubsubheader('beach', item.name)">
+              <mat-icon matSuffix matTooltip="Playa" [matTooltipPosition]="'below'">beach_access</mat-icon>
+              <span>Playa</span>
+            </div>
+            <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
-          <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
-        </div>
-        <div *ngFor="let item of suitcaseList['mountain']; let i=index" class="common-card-body">
-          <div class="card-header card-subsubheader" *ngIf="showSubsubheader('mountain', item.name)">
-            <mat-icon matSuffix matTooltip="Montaña" [matTooltipPosition]="'below'">filter_hdr</mat-icon>
-            <span>Montaña</span>
+          <div *ngFor="let item of suitcaseList['mountain']; let i=index" class="common-card-body">
+            <div class="card-header card-subsubheader" *ngIf="showSubsubheader('mountain', item.name)">
+              <mat-icon matSuffix matTooltip="Montaña" [matTooltipPosition]="'below'">filter_hdr</mat-icon>
+              <span>Montaña</span>
+            </div>
+            <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
-          <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
-        </div>
-        <div *ngFor="let item of suitcaseList['sport']; let i=index" class="common-card-body">
-          <div class="card-header card-subsubheader" *ngIf="showSubsubheader('sport', item.name)">
-            <mat-icon matSuffix matTooltip="Deporte" [matTooltipPosition]="'below'">sports_soccer</mat-icon>
-            <span>Deporte</span>
+          <div *ngFor="let item of suitcaseList['sport']; let i=index" class="common-card-body">
+            <div class="card-header card-subsubheader" *ngIf="showSubsubheader('sport', item.name)">
+              <mat-icon matSuffix matTooltip="Deporte" [matTooltipPosition]="'below'">sports_soccer</mat-icon>
+              <span>Deporte</span>
+            </div>
+            <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
-          <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
-        </div>
-        <div *ngFor="let item of suitcaseList['baby']; let i=index" class="common-card-body">
-          <div class="card-header card-subsubheader" *ngIf="showSubsubheader('baby', item.name)">
-            <mat-icon matSuffix matTooltip="Bebé" [matTooltipPosition]="'below'">baby_changing_station</mat-icon>
-            <span>Bebé</span>
+          <div *ngFor="let item of suitcaseList['baby']; let i=index" class="common-card-body">
+            <div class="card-header card-subsubheader" *ngIf="showSubsubheader('baby', item.name)">
+              <mat-icon matSuffix matTooltip="Bebé" [matTooltipPosition]="'below'">baby_changing_station</mat-icon>
+              <span>Bebé</span>
+            </div>
+            <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
-          <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
-        </div>
-        <div *ngFor="let item of suitcaseList['pet']; let i=index" class="common-card-body">
-          <div class="card-header card-subsubheader" *ngIf="showSubsubheader('pet', item.name)">
-            <mat-icon matSuffix matTooltip="Mascota" [matTooltipPosition]="'below'">pets</mat-icon>
-            <span>Mascota</span>
+          <div *ngFor="let item of suitcaseList['pet']; let i=index" class="common-card-body">
+            <div class="card-header card-subsubheader" *ngIf="showSubsubheader('pet', item.name)">
+              <mat-icon matSuffix matTooltip="Mascota" [matTooltipPosition]="'below'">pets</mat-icon>
+              <span>Mascota</span>
+            </div>
+            <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
           </div>
-          <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
+          <div *ngFor="let item of suitcaseList['others']; let i=index" class="common-card-body">
+            <div class="card-header card-subsubheader" *ngIf="showSubsubheader('others', item.name)">Otros</div>
+            <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
+          </div>
         </div>
-        <div *ngFor="let item of suitcaseList['others']; let i=index" class="common-card-body">
-          <div class="card-header card-subsubheader" *ngIf="showSubsubheader('others', item.name)">Otros</div>
-          <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
-        </div>
+        
       </div>
     </div>
 
-    <div class="col-lg-4 col-sm-6">
-      <div *ngIf="showWeather" class="weather-panel-wrapper">
-        <my-suitcase-weather-panel [coordinates]="suitcase.place.coordinates" [weatherDays]="weatherDays"></my-suitcase-weather-panel>
+    <div class="col-lg-3 col-sm-6 col-12 weather-column" *ngIf="weatherReady">
+      <div class="weather-panel-wrapper">
+        <div class="card-header weather-header">
+          <mat-icon matSuffix matTooltip="Suggestions" [matTooltipPosition]="'below'">sunny</mat-icon>
+          <span>El tiempo</span>
+          <mat-icon *ngIf="showWeather" (click)="showWeather = !showWeather" matSuffix matTooltip="expand" [matTooltipPosition]="'below'" class="unexpand">arrow_drop_up</mat-icon>
+          <mat-icon *ngIf="!showWeather" (click)="showWeather = !showWeather" matSuffix matTooltip="expand" [matTooltipPosition]="'below'" class="expand">arrow_drop_down</mat-icon>
+        </div>
+        <my-suitcase-weather-panel class="weather-body" *ngIf="showWeather" [coordinates]="suitcase.place.coordinates" [weatherDays]="weatherDays"></my-suitcase-weather-panel>
       </div>
     </div>
   </div>
@@ -177,12 +188,14 @@
 <ng-template #cardBody let-item let-i="i">
   <div class="card-body">
     <div class="item"  #suitcase [@showHiddenItem]="item.showInSuitcase ? 'show' : 'hidden'">
-      <div class="item-data">
-        <span class="item-name">{{item.name}}</span>
-        <input matInput type="number" [(ngModel)]="item.quantity" class="item-quantity">
-      </div>
-      <div class="item-actions">
-        <mat-icon aria-hidden="false" aria-label="Discard item" (click)="removeItem(suitcaseList[item.type], i, 'suitcase', viewChildrenSuitcase)">delete_sweep</mat-icon>
+      <span class="item-name">{{item.name}}</span>
+      <div class="item-attributes">
+        <mat-form-field class="item-data">
+          <input matInput type="number" [(ngModel)]="item.quantity">
+        </mat-form-field>
+        <div class="item-actions">
+          <mat-icon aria-hidden="false" aria-label="Discard item" (click)="removeItem(suitcaseList[item.type], i, 'suitcase', viewChildrenSuitcase)">delete_sweep</mat-icon>
+        </div>
       </div>
     </div>
   </div>
