--- a/src/app/public/create-suitcase/create-suitcase.component.scss
+++ b/src/app/public/create-suitcase/create-suitcase.component.scss
@@ -9,33 +9,60 @@ $margin: 15px;
   margin-bottom: 20px;
 }
 
+.full-screen {
+  height: calc(100% - #{$max-footer-height} - #{$min-header-height});
+}
+
 .columns-row {
   height: 70%;
 
   .suggestion-column {
-    height: 100%;
+    order: 1;
+    height: fit-content;
+  }
 
-    .card {
-      height: 100%;
-      overflow-y: scroll;
-    }
+  .suitcase-column {
+    order: 2;
+  }
+
+  .weather-column {
+    order: 3;
   }
 }
 
-.full-screen {
-  height: calc(100% - #{$max-footer-height} - #{$min-header-height});
+// WEATHER
+.weather-column {
+  height: fit-content;
+
+  .weather-header {
+    width: calc(100% + 32px);
+    margin-left: -16px;
+    margin-top: -8px;
+    margin-bottom: -8px;
+    height: 40px;
+    padding: 8px 16px;
+  }
+
+  .weather-body {
+    height: 250px;
+    margin-top: 8px;
+  }
 }
 
 .weather-panel-wrapper {
   border: solid 1px black;
   box-shadow: inset 0 0 10px $black;
   display: inline-block;
-  height: $weather-size;
-  padding: 20px;
+  max-height: $weather-size;
+  padding: 8px 16px;
   width: 100%;
   overflow: hidden;
   background: white;
 }
+
+
+
+
 
 #selection-categories-wrapper {
   position: absolute;
@@ -73,6 +100,19 @@ $margin: 15px;
   padding: 10px 20px;
 }
 
+.item-name {
+  max-width: calc(100% - 30px - 10px);
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.item-attributes {
+  margin-left: 10px;
+  width: 130px;
+  display: flex;
+}
+
 .item-data {
   width: calc(100% - #{$actions-size} - #{$actions-size} - #{$margin});
 }
@@ -84,6 +124,7 @@ $margin: 15px;
 }
 
 .card-header {
+  border-radius: 0!important;
   align-items: center;
   background: $tertiary-color;
   color: white;
@@ -110,19 +151,11 @@ $margin: 15px;
   &:hover {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     .item-actions {
-      display: block;
+      display: flex;
+      align-items: center;
     }
   }
-  // in case of stripped list, uncomment these lines
-  //.item:nth-child(odd) {
-  //  background: map_get($mat-suitcase-primary, 50);
-  //}
 }
-
-// in case of stripped list, uncomment these lines
-//.common-card-body:nth-child(odd) .card-body .item {
-//  background: map_get($mat-suitcase-primary, 50);
-//}
 
 .common-card-body:nth-child(even) .card-body .item {
   background: $white;
@@ -154,10 +187,24 @@ $margin: 15px;
 }
 
 .suitcase-card {
+  .item {
+    max-height: 50px;
+    box-sizing: content-box;
+  }
+
   .item-data {
     display: flex;
     align-items: center;
+    height: 30px;
     width: calc(100% - #{$actions-size} - #{$margin});
+
+    .mat-mdc-form-field-infix {
+      padding-top: 4px!important;
+    }
+
+    .mat-mdc-form-field-subscript-wrapper {
+      display: none;
+    }
 
     .item-name {
       width: 50%;
@@ -174,10 +221,6 @@ $margin: 15px;
       margin-left: 10px;
       color: white;
     }
-  }
-
-  .item-actions {
-    width: calc(#{$actions-size} + #{$margin});
   }
 }
 
@@ -240,56 +283,109 @@ $margin: 15px;
 .flip-out-ver-right{-webkit-animation:flip-out-ver-right .5s ease-in-out forwards;animation:flip-out-ver-right .5s ease-in-out forwards}
 
 
+.expand .unexpand {
+  -webkit-transition: transform 1.4s; /* Safari */
+  transition: transform 1.4s;
+}
+
 // MEDIAQUERYS
 @media (max-width: 992px){
-  .suggestion-lists {
-    max-height: 250px;
-    overflow-y: scroll;
+  .row {
+    margin-bottom: 0px;
   }
 
-  .suitcase-column {
-    top: 500px;
-    max-width: 720px;
-    position: absolute;
-    padding-bottom: 20px;
+  .columns-row {
+    padding: 0 20px;
+
+    .suggestion-column {
+      margin-bottom: 30px;
+      border-radius: 10px;
+      padding-right: 30px;
+      overflow: hidden;
+
+      .suggestion-lists {
+        max-height: 250px;
+        overflow-y: scroll;
+      }
+    }
+
+    .suitcase-column {
+      order: 3;
+      padding-right: 30px;
+      padding-bottom: 20px;
+      max-height: 60%;
+  
+      .card-body {
+        max-height: 225px;
+        overflow-y: scroll;
+      }
+    }
+
+    .weather-column {
+      order: 2;
+      margin-bottom: 30px;
+
+      .weather-body {
+        max-height: 250px;
+      }
+    }
   }
 }
 
 @media (max-width: 768px){
-  #selection-categories-wrapper {
-    right: 20px;
-  }
 
-  .suitcase-column {
-    top: 500px;
-    max-width: 540px;
-    position: absolute;
-    padding-bottom: 20px;
-  }
 }
 
 @media (max-width: 576px){
-  .weather-panel-wrapper {
-    display: none;
+
+  .container {
+    height: auto;
+  }
+
+  .columns-row {
+    padding: 0 20px;
+    flex-direction: column;
   }
 
   #new-item-field {
-    margin-bottom: 40px;
+    min-height: 135px;
+
+    #selection-categories-wrapper {
+      bottom: -40px;
+      left: 0;
+    }
+  }
+  
+  .columns-row {
+    .suggestion-column {
+      margin-bottom: 30px;
+      border-radius: 10px;
+      padding-right: 30px;
+      overflow: hidden;
+
+      .suggestion-lists {
+        max-height: 175px;
+        overflow-y: scroll;
+      }
+    }  
+
+    .suitcase-column {
+      padding-right: 30px;
+      padding-bottom: 20px;
+
+      .card-body {
+        max-height: 225px;
+        overflow-y: scroll;
+      }
+    }
   }
 
-  #selection-categories-wrapper {
-    bottom: -40px;
-    left: 0;
+  .item-actions {
+    display: flex;
+    align-items: center;
   }
-
-  .row:nth-child(1) {
-    margin: 0;
-  }
-
-  .suitcase-column {
-    top: 500px;
-    max-width: 540px;
-    position: absolute;
-    padding-bottom: 20px;
+  
+  .weather-panel-wrapper {
+    display: none;
   }
 }
