set max height for lg screens

--- a/src/app/public/create-suitcase/create-suitcase.component.scss
+++ b/src/app/public/create-suitcase/create-suitcase.component.scss
@@ -23,6 +23,11 @@ $margin: 15px;
 
   .suitcase-column {
     order: 2;
+
+    .card-body {
+      max-height: 450px;
+      overflow-y: scroll;
+    }
   }
 
   .weather-column {
